--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,21 +5,22 @@
     "context": ".."
   },
   "workspaceFolder": "/opt/FreeCAD",
-  "postCreateCommand": "cd /opt/FreeCAD/build && ninja",
+  "mounts": [
+  "type=bind,source=${localWorkspaceFolder}/FreeCAD,target=/opt/FreeCAD,type=bind",
+  "type=bind,source=${localWorkspaceFolder}/.vscode,target=/opt/FreeCAD/.vscode,type=bind",
+  "type=bind,source=${env:SSH_AUTH_SOCK},target=/ssh-agent",
+  "type=bind,source=${env:HOME}/.gitconfig,target=/root/.gitconfig"
+  ],
   "remoteUser": "root",
+  "containerEnv": {
+    "SSH_AUTH_SOCK": "/ssh-agent"
+  },
   "settings": {
     "terminal.integrated.defaultProfile.linux": "bash"
   },
   "extensions": [
     "ms-vscode.cpptools",
     "ms-vscode.cmake-tools"
-  ],
-  "mounts": [
-    "type=bind,source=${env:SSH_AUTH_SOCK},target=/ssh-agent",
-    "type=bind,source=${env:HOME}/.gitconfig,target=/root/.gitconfig"
-  ],
-  "containerEnv": {
-    "SSH_AUTH_SOCK": "/ssh-agent"
-  }
+  ]
 }
 
